Fix horizontal scroll
From Feedback:

While the application is functionally responsive - there is a horizontal scroll which starts at about 483px. Other Responsiveness alerts in the 'Styling' section of the feedback below.

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -16,7 +16,7 @@
 }
 
 .landing-header-left h2 {
-  max-width: 12em;
+  max-width: 7em;
   margin: 1em 0;
   padding: 1em;
   background-color: #eff2f6;
